# AgInTi-LabCanvas

./: .gitattributes  .gitignore  AGENTS.md  README.md  SECURITY.md  package.json  pyproject.toml
.github/: FUNDING.yml
agentic_tools/: ORDER_AUTOMATION.md  order_assistant.py
cad/: README.md  environment-cad-python.yml
configs/: targets.example.json
docs/: ANDROID_DEVICE_CONTROL.md  BOARD_CAD_TASKS.md  NPM.md  PAPER_FIGURE_STUDIO.md  RESEARCH.md  WEBAPP.md  WECHAT_AUTOMATION.md  WSL_WINDOWS_DEPLOY.md
examples/: labcanvas-hardware-studio.scene.json
pcb/: jlcpcb-jialichuang-automation.md  kicad-mcp-research.md
references/: lalachan-story-video-handoff-for-wechat.md  lazyedit-agent-integration-handoff.md  remote-virtual-desktop-vnc-runbook.md  windows-hardware-design-toolchain.md
scripts/: run-python-tests.js  windows_install_design_toolchain.ps1  windows_labcanvas_doctor.ps1  windows_render_hardware_studio.ps1
tests/: test_adapters.py  test_backends.py  test_blender_bridge.py  test_camera_mcp_simulator.py  test_cli.py  test_config.py  test_labview_mcp_bridge.py  test_npm_package.py  test_paper_figures.py  test_shipinhao_comment_intel.py  test_webapp.py  test_wechat_agent_backend.py  test_wechat_autopublish_video.py  test_wechat_career_daily_agent.py  test_wechat_chat_sync_loop.py  test_wechat_chatops_bridge.py  test_wechat_codex_sessions.py  test_wechat_direct_backend.py  test_wechat_direct_chatops.py  test_wechat_gui_send.py  test_wechat_media_sync.py  test_wechat_memory.py  test_wechat_ops_health.py  test_wechat_routines.py  test_wechat_task_worker.py
(+479 files in other folders)
