[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "app-auto-action"
version = "0.1.0"
description = "A lightweight agent control hub for creative and scientific design tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
app-auto-action = "agenticapp.cli:main"
agenticapp = "agenticapp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agenticapp.web" = ["static/*"]
